--- a/app/globals.css
+++ b/app/globals.css
@@ -42,7 +42,7 @@
 html,
 body {
     width: 100%;
-    background-color: var(--background);
+    background-color: transparent;
     color: var(--foreground);
     scroll-behavior: smooth;
     overflow-x: hidden;
@@ -75,23 +75,18 @@ body {
             transparent 100%);
 }
 
-@utility masked-img {
-    mask-image: url("/images/mask-img.png");
-    mask-repeat: no-repeat;
-    mask-position: center;
-    mask-size: 50%;
-}
+
 
 @layer components {
     main {
-        @apply w-full overflow-x-hidden;
+        @apply w-full  overflow-x-hidden;
     }
 
     nav {
         @apply fixed z-50 w-full;
 
         div {
-            @apply flex md:flex-row flex-col md:justify-between items-center gap-5 py-5 lg:px-0 px-5 container mx-auto;
+            @apply flex md:flex-row flex-col md:justify-between items-center gap-5 py-5 lg:px-0 px-5;
         }
 
         p {
@@ -115,7 +110,7 @@ body {
         @apply relative z-10 min-h-dvh w-full border border-transparent;
 
         h1 {
-            @apply md:mt-32 mt-40 text-8xl md:text-[20vw] leading-none text-center font-archivo;
+            @apply md:mt-32 mt-40  leading-none text-center font-archivo;
         }
 
         .left-leaf {
@@ -127,7 +122,7 @@ body {
         }
 
         .body {
-            @apply container mx-auto absolute left-1/2 -translate-x-1/2 lg:bottom-20 top-auto md:top-[30vh] flex justify-between items-end px-5;
+            @apply absolute left-1/2 -translate-x-1/2 lg:bottom-20 top-auto md:top-[30vh] flex justify-between items-end px-5;
 
             .content {
                 @apply flex lg:flex-row flex-col w-full gap-10 justify-between items-center lg:items-end mx-auto;
@@ -155,9 +150,7 @@ body {
         }
     }
 
-    video {
-        @apply w-full md:h-[80%] h-1/2 absolute bottom-0 left-0 md:object-contain object-bottom object-cover;
-    }
+
 
     #cocktails {
         @apply relative min-h-dvh w-full overflow-hidden;
@@ -171,7 +164,7 @@ body {
         }
 
         .list {
-            @apply container mx-auto relative z-10 flex md:flex-row flex-col justify-between items-start gap-20 pt-40 2xl:px-0 px-5;
+            @apply relative z-10 flex md:flex-row flex-col justify-between items-start gap-20 pt-40 2xl:px-0 px-5;
 
             .popular {
                 @apply space-y-8 w-full md:w-fit;
@@ -208,7 +201,7 @@ body {
     }
 
     #about {
-        @apply min-h-screen py-28 2xl:px-0 px-5 container mx-auto;
+        @apply min-h-screen py-28 2xl:px-0 px-5;
 
         .content {
             @apply grid grid-cols-1 lg:grid-cols-12 gap-5;
@@ -317,7 +310,7 @@ body {
         }
 
         .content {
-            @apply flex flex-col justify-between items-center container mx-auto relative;
+            @apply flex flex-col justify-between items-center relative;
 
             .arrows {
                 @apply flex items-center justify-between w-full absolute;
@@ -377,7 +370,7 @@ body {
         }
 
         .content {
-            @apply container mx-auto lg:py-14 2xl:py-32 py-16 flex flex-col justify-between gap-10 min-h-dvh;
+            @apply lg:py-14 2xl:py-32 py-16 flex flex-col justify-between gap-10 min-h-dvh;
 
             h2 {
                 @apply lg:text-6xl 2xl:text-8xl text-5xl font-archivo md:translate-y-0 translate-y-5;
